Closed #174 compatibility with TestNG latest version (7.1.4)